--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "description": "> My superior Nuxt.js project",
   "main": "index.js",
   "dependencies": {
+    "@material-ui/core": "^4.9.14",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.8.0",
+    "firebase": "^7.14.4",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-firestore": "^1.0.1"
   },
   "devDependencies": {
+    "@material-ui/icons": "^4.9.1",
+    "@types/styled-components": "^5.1.0",
     "html-webpack-plugin": "^4.3.0",
+    "styled-components": "^5.1.0",
     "ts-loader": "^7.0.4",
     "typescript": "^3.9.3",
     "webpack": "^4.43.0",
