--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "description": "> My superior Nuxt.js project",
   "main": "index.js",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
     "@material-ui/core": "^4.9.14",
+    "@types/google-map-react": "^1.1.7",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "apollo-boost": "^0.4.9",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.8.0",
     "firebase": "^7.14.4",
+    "google-map-react": "^1.1.7",
+    "graphql": "^15.0.0",
+    "graphql-tag": "^2.10.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-firestore": "^1.0.1"
+    "react-google-maps": "^9.4.5",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@material-ui/icons": "^4.9.1",
@@ -26,9 +34,9 @@
     "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --config webpack.production.config.js",
     "watch": "webpack -w",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server --config webpack.development.config.js --progress"
   },
   "repository": {
     "type": "git",
