--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@material-ui/core": "^4.9.14",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.8.0",
     "firebase": "^7.14.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-firestore": "^1.0.1"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@material-ui/icons": "^4.9.1",
