--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
     "@material-ui/core": "^4.9.14",
+    "@types/google-map-react": "^1.1.7",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
@@ -13,10 +14,12 @@
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.8.0",
     "firebase": "^7.14.4",
+    "google-map-react": "^1.1.7",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
